update sprites (unfinished)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 assets/1x/temp
-assets/1x/blinds_kanto.png
-assets/1x/blinds_johto.png
-assets/2x/blinds_kanto.png
-assets/2x/blinds_johto.png
+assets/1x/blinds_hoenn.png
+assets/2x/blinds_hoenn.png
